minikubeで環境構築/kubesample/settings/rails.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails
spec:
  selector:
    app: rails
  type: NodePort
  ports:
  - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails
spec:
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: kambe/rails_app_minikube
        ports:
        - containerPort: 3000
        resources: {}
